--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,13 +16,13 @@ theme:
     primary: drac-purple
     accent: drac-purple
   font:
-    text: IBM Plex 
+    text: IBM Plex
     code: IBM Plex Mono
   features:
     - tabs
 
 # nav:
-#   - PyMdown Extensions: index.md
+  # - data analysis: data analysis/index.md
 #   - Installation: installation.md
 #   - Usage Notes: usage_notes.md
 
@@ -50,15 +50,15 @@ markdown_extensions:
           class: arithmatex
           format: !!python/name:pymdownx.arithmatex.fence_mathjax_format
   - pymdownx.highlight:
-      extend_pygments_lang:
-        - name: php-inline
-          lang: php
-          options:
-            startinline: true
-        - name: pycon3
-          lang: pycon
-          options:
-            python3: true
+      # extend_pygments_lang:
+      #   - name: php-inline
+      #     lang: php
+      #     options:
+      #       startinline: true
+      #   - name: pycon3
+      #     lang: pycon
+      #     options:
+      #       python3: true
       linenums_style: pymdownx-inline
   - pymdownx.inlinehilite:
       custom_inline:
@@ -87,8 +87,6 @@ markdown_extensions:
   - pymdownx.arithmatex:
   - pymdownx.mark:
   - pymdownx.striphtml:
-  - pymdownx.snippets:
-      base_path: docs/src/markdown/_snippets
   - pymdownx.keys:
       separator: "\uff0b"
   - pymdownx.details:
