--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ theme:
     code: IBM Plex Mono
   features:
     - tabs
+  language: zh
 
 # nav:
   # - data analysis: data analysis/index.md
@@ -33,13 +34,13 @@ markdown_extensions:
   - markdown.extensions.admonition:
   - markdown.extensions.smarty:
       smart_quotes: false
-  - pymdownx.betterem:
+  # - pymdownx.betterem:
   - markdown.extensions.attr_list:
   - markdown.extensions.def_list:
   - markdown.extensions.tables:
   - markdown.extensions.abbr:
   - markdown.extensions.footnotes:
-  - markdown.extensions.md_in_html:
+  # - markdown.extensions.md_in_html:
   - pymdownx.superfences:
       preserve_tabs: true
       custom_fences:
@@ -50,43 +51,34 @@ markdown_extensions:
           class: arithmatex
           format: !!python/name:pymdownx.arithmatex.fence_mathjax_format
   - pymdownx.highlight:
-      # extend_pygments_lang:
-      #   - name: php-inline
-      #     lang: php
-      #     options:
-      #       startinline: true
-      #   - name: pycon3
-      #     lang: pycon
-      #     options:
-      #       python3: true
       linenums_style: pymdownx-inline
   - pymdownx.inlinehilite:
       custom_inline:
         - name: math
           class: arithmatex
           format: !!python/name:pymdownx.arithmatex.inline_mathjax_format
-  - pymdownx.magiclink:
-      repo_url_shortener: true
-      repo_url_shorthand: true
-      social_url_shorthand: true
-      social_url_shortener: true
-      user: leon90dm
-      repo: KS
+  # - pymdownx.magiclink:
+  #     repo_url_shortener: true
+  #     repo_url_shorthand: true
+  #     social_url_shorthand: true
+  #     social_url_shortener: true
+  #     user: leon90dm
+  #     repo: KS
   - pymdownx.tilde:
   - pymdownx.caret:
   - pymdownx.smartsymbols:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
-  - pymdownx.escapeall:
-      hardbreak: True
-      nbsp: True
+  # - pymdownx.escapeall:
+      # hardbreak: True
+      # nbsp: True
   - pymdownx.tasklist:
       custom_checkbox: true
-  - pymdownx.progressbar:
+  # - pymdownx.progressbar:
   - pymdownx.arithmatex:
   - pymdownx.mark:
-  - pymdownx.striphtml:
+  # - pymdownx.striphtml:
   - pymdownx.keys:
       separator: "\uff0b"
   - pymdownx.details:
