--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,13 +34,14 @@ markdown_extensions:
   - markdown.extensions.admonition:
   - markdown.extensions.smarty:
       smart_quotes: false
-  # - pymdownx.betterem:
+  - pymdownx.betterem:
+      smart_enable: all
   - markdown.extensions.attr_list:
   - markdown.extensions.def_list:
   - markdown.extensions.tables:
   - markdown.extensions.abbr:
   - markdown.extensions.footnotes:
-  # - markdown.extensions.md_in_html:
+  - markdown.extensions.md_in_html:
   - pymdownx.superfences:
       preserve_tabs: true
       custom_fences:
@@ -57,15 +58,16 @@ markdown_extensions:
         - name: math
           class: arithmatex
           format: !!python/name:pymdownx.arithmatex.inline_mathjax_format
-  # - pymdownx.magiclink:
-  #     repo_url_shortener: true
-  #     repo_url_shorthand: true
-  #     social_url_shorthand: true
-  #     social_url_shortener: true
-  #     user: leon90dm
-  #     repo: KS
+  - pymdownx.magiclink:
+      repo_url_shortener: true
+      repo_url_shorthand: true
+      social_url_shorthand: true
+      social_url_shortener: true
+      user: leon90dm
+      repo: KS
   - pymdownx.tilde:
   - pymdownx.caret:
+  - pymdownx.critic:
   - pymdownx.smartsymbols:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
@@ -83,6 +85,8 @@ markdown_extensions:
       separator: "\uff0b"
   - pymdownx.details:
   - pymdownx.tabbed:
+  - pymdownx.snippets:
+      base_path: docs/src/markdown/_snippets
 
 # extra:
   # social:
@@ -90,11 +94,17 @@ markdown_extensions:
   #     link: https://github.com/leon90dm
   #   - icon: fontawesome/brands/discord
   #     link: https://discord.gg/fqQ7ypS
+
 extra_css:
   - assets/pymdownx-extras/extra-cd565ac465.css
+  # - https://unpkg.com/mermaid@7.1.2/dist/mermaid.css
 extra_javascript:
   - assets/pymdownx-extras/extra-835d408546.js
   - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML
+  # - https://unpkg.com/mermaid@8.5.0/dist/mermaid.min.js
+
+
+
 plugins:
   - search
   - git-revision-date-localized
